...
                        AssetImage('assets/icons/registration_100px.png'),
                        size: 80,
                        color: Colors.white,
                      ),
                    )),
                const Text(
                  'Register',
                  style: TextStyle(
                      color: Colors.white, fontSize: 25, fontFamily: 'UniNeue'),
                ),
                Expanded(
                  child: SingleChildScrollView(
                    child: Padding(
...
                        child: Column(
                          children: [
                            Padding(
                              padding:
                                  const EdgeInsets.only(left: 20.0, right: 40),
                              child: TextFormField(
                                key: const Key("register_email"),
                                style: const TextStyle(
                                    color: Colors.white, fontFamily: 'UniNeue'),
                                validator: (val) {},
                                controller: emailController,
                                keyboardType: TextInputType.emailAddress,
                                decoration: const InputDecoration(
...
                              ),
                            ),
                            Padding(
                              padding: const EdgeInsets.only(
                                  top: 40, left: 20.0, right: 40),
                              child: TextFormField(
                                key: const Key("register_pwd"),
                                style: const TextStyle(
                                    color: Colors.white, fontFamily: 'UniNeue'),
                                validator: (val) {},
                                obscureText: obscureText,
                                keyboardType: TextInputType.text,
                                controller: pwdController,
...
                              ),
                            ),
                            Padding(
                              padding: const EdgeInsets.only(
                                  top: 40, left: 20.0, right: 40),
                              child: TextFormField(
                                key: const Key("register_cpwd"),
                                style: const TextStyle(
                                    color: Colors.white,
                                    fontFamily: 'UniNeue',
                                    fontSize: 18),
                                keyboardType: TextInputType.text,
                                validator: (val) {},
...
                                    }
                                    else{
                                      alerts('Register', 'Fill all the fields.');
                                    }
                                  },
                                  child: const Text(
                                    'Submit',
                                    style: TextStyle(
                                        color: Colors.white,
                                        fontSize: 20,
                                        fontFamily: 'UniNeue'),
                                  )),
                            ),
...
