...
import 'package:bloc_login/logic/blocs/auth/bloc/auth_bloc.dart';
import 'package:bloc_login/logic/blocs/auth/bloc/auth_state.dart';
import 'package:bloc_login/logic/helpers/validator.dart';
import 'package:shared_preferences/shared_preferences.dart';

class Login extends StatefulWidget {
  const Login({Key key}) : super(key: key);

  @override
  _LoginState createState() => _LoginState();
}

class _LoginState extends State<Login> {
...
                            child: Column(
                              children: [
                                Padding(
                                  padding: const EdgeInsets.only(
                                      left: 20.0, right: 40),
                                  child: TextFormField(
                                    key: const Key("login_email"),
                                    style: const TextStyle(
                                        color: Colors.white,
                                        fontFamily: 'UniNeue',
                                        fontSize: 18),
                                    validator: (val) => validateEmail(val),
                                    controller: emailController,
...
                                  height: 40,
                                ),
                                Padding(
                                  padding: const EdgeInsets.only(
                                      left: 20.0, right: 40),
                                  child: TextFormField(
                                    key: const Key("login_pwd"),
                                    style: const TextStyle(
                                        color: Colors.white,
                                        fontFamily: 'UniNeue',
                                        fontSize: 18),
                                    validator: (val) => validatePassword(val),
                                    obscureText: obscureText,
...
                                  child: GestureDetector(
                                    onTap: () {
                                      Navigator.of(context)
                                          .pushNamed('/forgot-password');
                                    },
                                    child: const Text(
                                      'Forgot your password?',
                                      style: TextStyle(
                                          fontSize: 18,
                                          fontFamily: 'UniNeue',
                                          color: Colors.white,
                                          decoration: TextDecoration.underline),
                                    ),
...
